--- a/public/index.html
+++ b/public/index.html
@@ -47,34 +47,34 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Codecov</title>
-    <% if(process.env.REACT_APP_ENV === "production" && !process.env.REACT_APP_IS_ENTERPRISE ) { %>
-    <script>
-      const SEGMENT_KEY = '%REACT_APP_SEGMENT_KEY%'
-      !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"];analytics.factory=function(e){return function(){var t=Array.prototype.slice.call(arguments);t.unshift(e);analytics.push(t);return analytics}};for(var e=0;e<analytics.methods.length;e++){var key=analytics.methods[e];analytics[key]=analytics.factory(key)}analytics.load=function(key,e){var t=document.createElement("script");t.type="text/javascript";t.async=!0;t.src="https://cdn.segment.com/analytics.js/v1/" + key + "/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);analytics._loadOptions=e};analytics._writeKey=SEGMENT_KEY;analytics.SNIPPET_VERSION="4.13.2";
-        analytics.load(SEGMENT_KEY);
-      }}();
-    </script>
-    <script>
-      window.dataLayer = [{
-        codecov: {
-          app: {
-            version: 'react-app'
+    <% if(process.env.REACT_APP_ENV === "production" && process.env.REACT_APP_IS_ENTERPRISE !== "true") { %>
+      <script>
+        const SEGMENT_KEY = '%REACT_APP_SEGMENT_KEY%'
+        !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"];analytics.factory=function(e){return function(){var t=Array.prototype.slice.call(arguments);t.unshift(e);analytics.push(t);return analytics}};for(var e=0;e<analytics.methods.length;e++){var key=analytics.methods[e];analytics[key]=analytics.factory(key)}analytics.load=function(key,e){var t=document.createElement("script");t.type="text/javascript";t.async=!0;t.src="https://cdn.segment.com/analytics.js/v1/" + key + "/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);analytics._loadOptions=e};analytics._writeKey=SEGMENT_KEY;analytics.SNIPPET_VERSION="4.13.2";
+          analytics.load(SEGMENT_KEY);
+        }}();
+      </script>
+      <script>
+        window.dataLayer = [{
+          codecov: {
+            app: {
+              version: 'react-app'
+            }
           }
-        }
-      }]
-    </script>
-    <script>
-      ;(function(w, d, s, l, i) {
-        w[l] = w[l] || []
-        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != 'dataLayer' ? '&l=' + l : ''
-        j.async = true
-        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
-        f.parentNode.insertBefore(j, f)
-      })(window, document, 'script', 'dataLayer', 'GTM-KGH2DSG')
-    </script>
+        }]
+      </script>
+      <script>
+        ;(function(w, d, s, l, i) {
+          w[l] = w[l] || []
+          w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
+          var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s),
+            dl = l != 'dataLayer' ? '&l=' + l : ''
+          j.async = true
+          j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
+          f.parentNode.insertBefore(j, f)
+        })(window, document, 'script', 'dataLayer', 'GTM-KGH2DSG')
+      </script>
         <script>
           (function(apiKey){
               (function(p,e,n,d,o){var v,w,x,y,z;o=p[d]=p[d]||{};o._q=o._q||[];
@@ -90,7 +90,7 @@
   <body class="text-sm text-ds-gray-octonary">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <% if(process.env.REACT_APP_ENV === "production" && !process.env.REACT_APP_IS_ENTERPRISE ) { %>
+    <% if(process.env.REACT_APP_ENV === "production" && process.env.REACT_APP_IS_ENTERPRISE !== 'true' ) { %>
     <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-KGH2DSG"
