--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
   <body class="text-sm text-ds-gray-octonary">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <% if(process.env.REACT_APP_ENV === "production" && process.env.REACT_APP_IS_ENTERPRISE !== 'true' ) { %>
+    <% if(process.env.REACT_APP_ENV === "production" && process.env.REACT_APP_IS_ENTERPRISE !== "true" ) { %>
     <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-KGH2DSG"
