--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta property="twitter:site:id" content="122181800">
     <meta property="twitter:creator" content="codecov">
     <meta property="twitter:creator:id" content="122181800">
-    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="Codecov">
     <meta property="twitter:description" content="Code coverage done right. Hosted coverage report highly integrated with GitHub, Bitbucket and GitLab. Awesome pull request comments to enhance your QA.">
     <meta property="twitter:image:src" content="https://storage.googleapis.com/codecov-cdn/static/Codecov-icon-600x600.png">
