--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
                   o[m]=o[m]||function(){o._q[m===v[0]?'unshift':'push']([m].concat([].slice.call(arguments,0)));};})(v[w]);
                   y=e.createElement(n);y.async=!0;y.src='https://cdn.pendo.io/agent/static/'+apiKey+'/pendo.js';
                   z=e.getElementsByTagName(n)[0];z.parentNode.insertBefore(y,z);})(window,document,'script','pendo');
-          })('674b3c81-3791-4a19-7986-1743cc7dba0f');
+          })('%REACT_APP_PENDO_KEY%');
       </script>
     <% } %>
     </head>
